# tika-xps

./: .gitignore  Jenkinsfile  Makefile.am  README.md  pom.xml
samples/: test1.xps  test2.xps
src/main/java/com/mydlp/tikaxps/: XPSParser.java
src/main/java/javaaxp/core/: XPSCoreActivator.java
src/main/java/javaaxp/core/service/: CachingResourceLoader.java  DelegatingResourceDictionary.java  IXPSAccess.java  IXPSDocumentAccess.java  IXPSFileAccess.java  IXPSFileStructureConstants.java  IXPSIterator.java  IXPSPageAccess.java  IXPSService.java  IXPSVisitor.java  LRUCache.java  LinkTargetNotFoundException.java  XPSError.java  XPSSpecError.java
src/main/java/javaaxp/core/service/impl/: XPSDocumentAccessImpl.java  XPSElementIterator.java  XPSFileAccessImpl.java  XPSPageAccessImpl.java  XPSPageElementIterator.java  XPSServiceImpl.java  XPSVisualElementIterator.java
src/main/java/javaaxp/core/service/impl/document/jaxb/: CTArcSegment.java  CTBreak.java  CTCPBrush.java  CTCPGeometry.java  CTCPGradientStops.java  CTCPImageBrush.java  CTCPLinkTargets.java  CTCPOutline.java  CTCPResources.java  CTCPTransform.java  CTCPVisual.java  CTCanvas.java  CTDiscard.java  CTDiscardControl.java  CTDocumentOutline.java  CTDocumentReference.java  CTDocumentStructure.java  CTFigure.java  CTFixedDocument.java  CTFixedDocumentSequence.java  CTFixedPage.java  CTGlyphs.java  CTGradientStop.java  CTLinearGradientBrush.java  CTLinkTarget.java  CTList.java  CTListItem.java  CTMatrixTransform.java  CTNamedElement.java  CTOutlineEntry.java  CTPageContent.java  CTParagraph.java  CTPath.java  CTPathFigure.java  CTPathGeometry.java  CTPolyBezierSegment.java  CTPolyLineSegment.java  CTPolyQuadraticBezierSegment.java  CTRadialGradientBrush.java  CTResourceDictionary.java  (+16 more)
src/main/java/javaaxp/core/service/impl/fileaccess/: FontResourceDirectory.java  XPSZipFileAccess.java
src/main/java/javaaxp/core/service/model/document/: FullOrShorthandData.java  IDocumentOutline.java  IDocumentReference.java  IDocumentStructure.java  IFixedDocument.java  IFixedDocumentSequence.java  IGradientStops.java  ILinkTarget.java  ILinkTargets.java  IOutline.java  IOutlineEntry.java  IStory.java  IStoryFragment.java
src/main/java/javaaxp/core/service/model/document/page/: IArcSegment.java  IBrush.java  ICanvas.java  IFixedPage.java  IGeometry.java  IGlyphs.java  IGradientStop.java  IImageBrush.java  ILineSegment.java  ILinearGradientBrush.java  IPath.java  (+28 more)
src/test/java/com/mydlp/tikaxps/: ParserTest.java
(+1 files in other folders)
